[gd_scene load_steps=6 format=3 uid="uid://td0unrt0y3tq"]

[ext_resource type="Script" path="res://Scripts/object.gd" id="1_6bbyo"]
[ext_resource type="Texture2D" uid="uid://de67ojyetjitr" path="res://Art/icon.svg" id="2_mwtxe"]
[ext_resource type="PackedScene" uid="uid://bhx4y3nuykjad" path="res://Scenes/object_water_detection_2d.tscn" id="3_vo4jl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l408l"]
size = Vector2(42, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88iq8"]
size = Vector2(46, 45)

[node name="object" type="RigidBody2D"]
collision_layer = 8
input_pickable = true
script = ExtResource("1_6bbyo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(39.5, 40)
scale = Vector2(0.382813, 0.375)
texture = ExtResource("2_mwtxe")

[node name="WaterDetection2D" parent="." instance=ExtResource("3_vo4jl")]
position = Vector2(37, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(39, 40)
shape = SubResource("RectangleShape2D_l408l")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(40, 40)
shape = SubResource("RectangleShape2D_88iq8")

[connection signal="water_state_changed" from="WaterDetection2D" to="." method="_on_water_detection_2d_water_state_changed"]
